api: add electrical profiles seen to simulation result
